# solva-notes-fastapi-start-Andasbek

./: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_notes_table.py
app/: main.py
app/api/: routers.py
app/api/endpoints/: __init__.py  notes.py
app/api/schemas/: __init__.py  note.py  user.py
app/core/: base.py  config.py  constants.py  db.py
app/db/crud/: __init__.py  note.py
app/db/models/: __init__.py  note.py
