[project]
name = "fastapi-notes-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.32",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1"
]

[tool.uvicorn]
factory = true
host = "0.0.0.0"
port = 8000
